--- a/CódigoFuente/BitacorasProduccion/Views/IT_matriz_requerimientos/Cerrar.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_matriz_requerimientos/Cerrar.cshtml
@@ -1,5 +1,5 @@
 ﻿@model Portal_2_0.Models.IT_matriz_requerimientosCerrarModel
-
+@using Clases.Util;
 @{
     ViewBag.Title = "Cerrar Solicitud de Requerimientos de Usuario";
     ViewBag.PrimerNivel = "sistemas";
@@ -333,17 +333,17 @@
                                 </div>
                             </div>
                             @*<div class="ln_solid"></div>
-            <div class="form-group row">
-                <span style="color:dimgrey"><b>&emsp; 3.3- INTERNET</b></span>
+                                <div class="form-group row">
+                                    <span style="color:dimgrey"><b>&emsp; 3.3- INTERNET</b></span>
 
-            </div>
+                                </div>
 
-            <div class="form-group row">
-                @Html.LabelFor(model => model.matriz.id_internet_tipo, new { @class = "control-label col-md-2" })
-                <div class="col-md-4 col-sm-4 ">
-                    <input type="text" id="id_internet_tipo" class="form-control" value="@(Model.matriz.IT_internet_tipo!=null ? Model.matriz.IT_internet_tipo.descripcion : "NO DISPONIBLE" )" readonly="readonly" />
-                </div>
-            </div>*@
+                                <div class="form-group row">
+                                    @Html.LabelFor(model => model.matriz.id_internet_tipo, new { @class = "control-label col-md-2" })
+                                    <div class="col-md-4 col-sm-4 ">
+                                        <input type="text" id="id_internet_tipo" class="form-control" value="@(Model.matriz.IT_internet_tipo!=null ? Model.matriz.IT_internet_tipo.descripcion : "NO DISPONIBLE" )" readonly="readonly" />
+                                    </div>
+                                </div>*@
 
                             <div class="ln_solid"></div>
                             <div class="form-group row">
@@ -608,12 +608,63 @@
                                 </div>
 
                                 <div class="item form-group">
-                                    <div class="col-md-12" >
-                                        @Html.TextAreaFor(model => model.matriz.comentario_rechazo, new { @class = "form-control", @rows = "5", @readonly = "readonly", @style= "color:#d01414" })
+                                    <div class="col-md-12">
+                                        @Html.TextAreaFor(model => model.matriz.comentario_rechazo, new { @class = "form-control", @rows = "5", @readonly = "readonly", @style = "color:#d01414" })
                                         @Html.ValidationMessageFor(model => model.matriz.comentario_rechazo, "", new { @class = "text-danger" })
                                     </div>
 
                                 </div>
+                            }
+
+
+                            if (User.IsInRole(TipoRoles.IT_MATRIZ_REQUERIMIENTOS_CERRAR))
+                            {
+                                <div class="ln_solid"></div>
+
+                                <div class="form-group row">
+                                    <span style="color:green"><b>HISTORIAL DE ASIGNACIONES</b></span>
+                                </div>
+
+                                <div class="form-group row">
+                                    <table id="datatable_5" class="table table-striped table-bordered nowrap" cellspacing="0" width="100%">
+                                        <thead>
+                                            <tr>
+                                                <th>
+                                                    #
+                                                </th>
+                                                <th>
+                                                    Responsable
+                                                </th>
+                                                <th>
+                                                    Fecha Asignacion
+                                                </th>
+                                                <th width="35%">
+                                                    Comentarios de Asignación
+                                                </th>
+
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            @{int c = Model.matriz.IT_matriz_asignaciones.Count;}
+                                            @foreach (var item in Model.matriz.IT_matriz_asignaciones.OrderByDescending(x => x.fecha_asignacion))
+                                            {
+                                                <tr style="@(item.activo?"background-color:#EBFCDC; font-weight:bold;color:green":String.Empty)">
+                                                    <td>@(c--)</td>
+                                                    <td>@Html.DisplayFor(model => item.empleados.ConcatNombre)</td>
+                                                    <td>
+                                                        @Html.DisplayFor(model => item.fecha_asignacion)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(model => item.comentario)
+                                                    </td>
+                                                </tr>
+                                            }
+                                        </tbody>
+                                    </table>
+
+                                </div>
+
+
                             }
 
                             <div class="ln_solid"></div>
@@ -624,17 +675,30 @@
                                     <div class="col-md-1 col-sm-1 ">
                                         <button type="button" class="btn btn-danger btn-lg" onclick="mostrarModalRechazar()">Rechazar</button>
                                     </div>
-
-                                    <div class="col-md-8 col-sm-8">
-                                        <button type="button" id="btn-progreso" class="btn btn-primary btn-lg float-md-right"><i class="fa-regular fa-bookmark"></i> Guardar Progreso</button>
+                                    <div class="col-md-2 col-sm-2 ">
+                                        <a href="@Url.Action("Asignar", ViewBag.ControllerName, new { id = Model.id })" class="btn btn-primary btn-lg" rel="tooltip" data-title="Asignar Solicitud" data-placement="right">
+                                            <i class="fa-solid fa-user-tag"></i> Asignar
+                                        </a>
                                     </div>
-                                    <div class="col-md-3 col-sm-3 ">
-                                        <button type="button" id="btn-ok" class="btn btn-success btn-lg float-md-right"><i class="fa-solid fa-box-archive"></i> Cerrar Solicitud</button>
+
+                                    <div class="col-md-3 col-sm-3">
+                                    </div>
+                                    <div class="col-md-2 col-sm-2">
+                                        <button type="button" id="btn-progreso" class="btn btn-primary btn-lg btn-block float-md-right"><i class="fa-regular fa-bookmark"></i> Guardar Progreso</button>
+                                    </div>
+                                    <div class="col-md-2 col-sm-2 ">
+                                        <button type="button" id="btn-ok" class="btn btn-info btn-lg btn-block float-md-right"><i class="fa-regular fa-floppy-disk"></i> Notificar</button>
+                                    </div>
+                                    <div class="col-md-2 col-sm-2 ">
+                                        <button type="button" id="btn-ok-close" class="btn btn-success btn-lg btn-block float-md-right"><i class="fa-solid fa-box-archive"></i> Notificar y Cerrar</button>
                                     </div>
                                 }
                                 else
                                 {
-                                    <div class="col-md-12 col-sm-12">
+                                    <div class="col-md-10 col-sm-10">
+                                        <button type="button" id="btn-actualizar-acividad" class="btn btn-warning btn-lg  float-md-right"><i class="fa-regular fa-floppy-disk"></i> Actualizar y Finalizar Actividad</button>
+                                    </div>
+                                    <div class="col-md-2 col-sm-2">
                                         <button type="button" id="btn-actualizar" class="btn btn-primary btn-lg float-md-right"><i class="fa-regular fa-floppy-disk"></i> Actualizar</button>
                                     </div>
                                 }
@@ -812,6 +876,49 @@
 
 
             });
+            $('form #btn-actualizar-acividad').click(function (e) {
+                let $form = $(this).closest('form');
+
+                const swalWithBootstrapButtons = Swal.mixin({
+                    customClass: {
+                        confirmButton: 'btn btn-success',
+                        cancelButton: 'btn btn-danger'
+                    },
+                    buttonsStyling: false,
+                })
+
+
+                swalWithBootstrapButtons.fire({
+                    title: '¿Desea Continuar?',
+                    html: "Se actualizarán los datos de la Matriz de Requerimientos.",
+                    showCancelButton: true,
+                    confirmButtonText: 'Aceptar',
+                    cancelButtonText: 'Cancelar'
+                }).then((result) => {
+                    if (result.value) {
+
+                        $('#tipo_form').val("finalizar_actividad");
+                        $('#correo').prop("required", true);
+                        $('#C8ID').prop("required", true);
+                        $('#comentario_cierre').prop("required", true);
+
+                        //espera a que se cierre el modal para enviar el formulario
+                        setTimeout(function () {
+                            $form.submit();
+                            clicMenu(2);
+                        }, 900);
+
+                    } else if (
+                        result.dismiss === Swal.DismissReason.cancel
+                    ) {
+                        swalWithBootstrapButtons.fire(
+                            'Advertencia', 'Los cambios no han sido guardados.', 'warning'
+                        );
+                    }
+                });
+
+
+            });
 
             $('form #btn-ok').click(function (e) {
                 let $form = $(this).closest('form');
@@ -835,6 +942,47 @@
                     if (result.value) {
                         //agrega la validacion required
                         AgregaRequired();
+                        //espera a que se cierre el modal para enviar el formulario
+                        setTimeout(function () {
+                            $form.submit();
+                            clicMenu(2);
+                        }, 900);
+
+                    } else if (
+                        result.dismiss === Swal.DismissReason.cancel
+                    ) {
+                        swalWithBootstrapButtons.fire(
+                            'Advertencia', 'Los cambios no han sido guardados.', 'warning'
+                        );
+                    }
+                });
+
+            });
+            $('form #btn-ok-close').click(function (e) {
+                let $form = $(this).closest('form');
+
+                const swalWithBootstrapButtons = Swal.mixin({
+                    customClass: {
+                        confirmButton: 'btn btn-success',
+                        cancelButton: 'btn btn-danger'
+                    },
+                    buttonsStyling: false,
+                })
+
+
+                swalWithBootstrapButtons.fire({
+                    title: '¿Desea Continuar?',
+                    html: "Se cerrará la solicitud y se enviará notificación al Jefe Directo y a RH.",
+                    showCancelButton: true,
+                    confirmButtonText: 'Aceptar',
+                    cancelButtonText: 'Cancelar'
+                }).then((result) => {
+                    if (result.value) {
+                        //agrega la validacion required
+                        AgregaRequired();
+
+                        $('#tipo_form').val("cierre_close");
+
                         //espera a que se cierre el modal para enviar el formulario
                         setTimeout(function () {
                             $form.submit();
@@ -987,11 +1135,13 @@
             $('#tipo_form').val("cierre");
             $('#correo').prop("required", true);
             $('#C8ID').prop("required", true);
+            $('#comentario_cierre').prop("required", true);
         }
         function QuitaRequired() {
             $('#tipo_form').val("progreso");
             $('#correo').removeAttr("required");
             $('#C8ID').removeAttr("required");
+            $('#comentario_cierre').removeAttr("required");
         }
 
         // Warning
