--- a/CódigoFuente/BitacorasProduccion/Views/RU_registros/Create.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/RU_registros/Create.cshtml
@@ -92,7 +92,19 @@
                                     @Html.EditorFor(model => model.placas_tractor, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off", @required = "required" } })
                                     @Html.ValidationMessageFor(model => model.placas_tractor, "", new { @class = "text-danger" })
                                 </div>
-                                @Html.LabelFor(model => model.carga, new { @class = "col-form-label col-md-1 col-sm-1 label-align" })
+                                @Html.LabelFor(model => model.placa_plataforma_uno, new { @class = "col-form-label col-md-2 col-sm-2" })
+                                <div class="col-md-2 col-sm-2">
+                                    @Html.EditorFor(model => model.placa_plataforma_uno, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
+                                    @Html.ValidationMessageFor(model => model.placa_plataforma_uno, "", new { @class = "text-danger" })
+                                </div>
+                                @Html.LabelFor(model => model.placa_plataforma_dos, new { @class = "col-form-label col-md-2 col-sm-2" })
+                                <div class="col-md-2 col-sm-2">
+                                    @Html.EditorFor(model => model.placa_plataforma_dos, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
+                                    @Html.ValidationMessageFor(model => model.placa_plataforma_dos, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                @Html.LabelFor(model => model.carga, new { @class = "col-form-label col-md-1 col-sm-1" })
                                 <div class="col-md-1 col-sm-1">
                                     @Html.EditorFor(model => model.carga, new { htmlAttributes = new { @class = "form-control", @autocomplete = "off" } })
                                     @Html.ValidationMessageFor(model => model.carga, "", new { @class = "text-danger" })
