--- a/CódigoFuente/BitacorasProduccion/Views/RU_registros/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/RU_registros/Index.cshtml
@@ -21,7 +21,7 @@
     <!-- Select2 -->
     <link href="@Url.Content("~/Content/vendors/select2/css/select2.css")" rel="stylesheet">
     <link href="@Url.Content("~/Content/vendors/select2-bootstrap4-theme/select2-bootstrap4.min.css")" rel="stylesheet">
-    <link href="~/Content/step-progress-bar.css" rel="stylesheet" />
+    <link href="~/Content/step-progress-bar.css?fecha=@DateTime.Now" rel="stylesheet" />
     <style>
     </style>
 }
@@ -137,7 +137,7 @@
                                 <div class="card-box table-responsive">
                                     <table id="datatable_1" class="table table-striped table-bordered" cellspacing="0" width="100%">
                                         <thead>
-                                            <tr>
+                                            <tr style="background-color: #009ff5; color: azure;">
                                                 <th>
                                                     @Html.DisplayNameFor(model => model.id)
                                                 </th>
@@ -152,6 +152,12 @@
                                                 </th>
                                                 <th>
                                                     @Html.DisplayNameFor(model => model.placas_tractor)
+                                                </th>
+                                                <th>
+                                                    @Html.DisplayNameFor(model => model.placa_plataforma_uno)
+                                                </th>
+                                                <th>
+                                                    @Html.DisplayNameFor(model => model.placa_plataforma_dos)
                                                 </th>
                                                 <th>
                                                     @Html.DisplayNameFor(model => model.nombre_operador)
@@ -169,15 +175,19 @@
                                             @foreach (var item in Model)
                                             {
                                                 bool complete = item.hora_vigilancia_salida.HasValue;
-                                                bool cancel = item.hora_cancelacion.HasValue;
-                                                <tr style="color:@(complete?"#009f00":item.hora_cancelacion.HasValue?"#f00000":"#009ff5"); font-weight:bold">
+                                                bool cancel = item.hora_cancelacion.HasValue && item.hora_vigilancia_salida.HasValue;
+                                                bool cancelEnPlanta = item.hora_cancelacion.HasValue && !item.hora_vigilancia_salida.HasValue;
+                                                string styleColor = (complete ? "complete-color" : string.Empty) + " " + (cancel ? "cancel-color" : String.Empty)+ " " + (cancelEnPlanta ? "cancel-planta-color" : String.Empty);
+                                                string styleBackgroundColor = (complete ? "complete-background-color" : string.Empty) + " " + (cancel ? "cancel-background-color" : String.Empty)+ " " + (cancelEnPlanta ? "cancel-planta-background-color" : String.Empty);
+
+                                                <tr style="font-weight:bold" class="activo @styleColor">
                                                     <td nowrap>
                                                         @Html.DisplayFor(modelItem => item.id)
                                                     </td>
                                                     <td>
                                                         @Html.DisplayFor(modelItem => item.EstadoString)
                                                     </td>
-                                                    <td nowrap>
+                                                    <td>
                                                         @Html.DisplayFor(modelItem => item.TipoOperacion)
                                                     </td>
                                                     <td>
@@ -186,6 +196,12 @@
                                                     <td nowrap>
                                                         @Html.DisplayFor(modelItem => item.placas_tractor)
                                                     </td>
+                                                    <td nowrap>
+                                                        @Html.DisplayFor(modelItem => item.placa_plataforma_uno)
+                                                    </td>
+                                                    <td nowrap>
+                                                        @Html.DisplayFor(modelItem => item.placa_plataforma_dos)
+                                                    </td>
                                                     <td>
                                                         @Html.DisplayFor(modelItem => item.nombre_operador)
                                                     </td>
@@ -193,45 +209,45 @@
                                                         <!-- Smart Step Progress Bar -->
                                                         <ul2>
                                                             <li2 title="@Html.DisplayFor(modelItem => item.RU_usuarios_vigilancia.nombre)" data-toggle="tooltip" data-placement="top">
-                                                                <i class="icons awesome fa-solid fa-door-open activo @(complete?"complete-color":String.Empty) @(cancel?"cancel-color":String.Empty)"></i>
-                                                                <div onclick="details(@item.id)" class="step first active @(complete?"complete-background-color":String.Empty) @(cancel?"cancel-background-color":String.Empty)">
+                                                                <i class="icons awesome fa-solid fa-door-open activo @styleColor"></i>
+                                                                <div onclick="details(@item.id)" class="step first active @styleBackgroundColor">
                                                                     <p>1</p>
                                                                     <i class="awesome fa-solid fa-check"></i>
                                                                 </div>
-                                                                <p class="label activo @(complete?"complete-color":String.Empty) @(cancel?"cancel-color":String.Empty)">Entrada<br />@item.fecha_ingreso_vigilancia.ToShortDateString()<br />@item.fecha_ingreso_vigilancia.ToShortTimeString()  </p>
+                                                                <p class="label activo @styleColor">Entrada<br />@item.fecha_ingreso_vigilancia.ToShortDateString()<br />@item.fecha_ingreso_vigilancia.ToShortTimeString()  </p>
 
                                                             </li2>
                                                             <li2 title="@Html.DisplayFor(modelItem => item.empleados1.ConcatNombre)" data-toggle="tooltip" data-placement="top">
-                                                                <i class="icons awesome fa-solid fa-warehouse @(item.hora_embarques_recepcion.HasValue?"activo":String.Empty) @(complete?"complete-color":String.Empty) @(cancel?"cancel-color":String.Empty)"></i>
-                                                                <div onclick="details(@item.id)" class="step second @(item.hora_embarques_recepcion.HasValue?"active":String.Empty) @(complete?"complete-background-color":String.Empty) @(cancel?"cancel-background-color":String.Empty)">
+                                                                <i class="icons awesome fa-solid fa-warehouse @(item.hora_embarques_recepcion.HasValue?"activo":String.Empty) @styleColor"></i>
+                                                                <div onclick="details(@item.id)" class="step second @(item.hora_embarques_recepcion.HasValue?"active":String.Empty) @styleBackgroundColor">
                                                                     <p>2</p>
                                                                     <i class="awesome fa-solid fa-check"></i>
                                                                 </div>
-                                                                <p class="label @(item.hora_embarques_recepcion.HasValue?"activo":String.Empty) @(complete?"complete-color":String.Empty) @(cancel?"cancel-color":String.Empty)">Embarques <br />@(item.hora_embarques_recepcion.HasValue? item.hora_embarques_recepcion.Value.ToShortDateString():String.Empty) &nbsp;<br />@(item.hora_embarques_recepcion.HasValue? item.hora_embarques_recepcion.Value.ToShortTimeString():String.Empty) &nbsp;</p>
+                                                                <p class="label @(item.hora_embarques_recepcion.HasValue?"activo":String.Empty) @styleColor">Registro en Oficina <br />@(item.hora_embarques_recepcion.HasValue? item.hora_embarques_recepcion.Value.ToShortDateString():String.Empty) &nbsp;<br />@(item.hora_embarques_recepcion.HasValue? item.hora_embarques_recepcion.Value.ToShortTimeString():String.Empty) &nbsp;</p>
                                                             </li2>
                                                             <li2 title="@Html.DisplayFor(modelItem => item.empleados.ConcatNombre)" data-toggle="tooltip" data-placement="top">
-                                                                <i class="icons awesome fa-solid fa-truck-ramp-box @(item.hora_embarques_liberacion.HasValue?"activo":String.Empty) @(complete?"complete-color":String.Empty) @(cancel?"cancel-color":String.Empty)"></i>
-                                                                <div onclick="details(@item.id)" class="step third @(item.hora_embarques_liberacion.HasValue?"active":String.Empty) @(complete?"complete-background-color":String.Empty) @(cancel?"cancel-background-color":String.Empty)">
+                                                                <i class="icons awesome fa-solid fa-truck-ramp-box @(item.hora_embarques_liberacion.HasValue?"activo":String.Empty) @styleColor"></i>
+                                                                <div onclick="details(@item.id)" class="step third @(item.hora_embarques_liberacion.HasValue?"active":String.Empty) @styleBackgroundColor">
                                                                     <p>3</p>
                                                                     <i class="awesome fa-solid fa-check"></i>
                                                                 </div>
-                                                                <p class="label @(item.hora_embarques_liberacion.HasValue?"activo":String.Empty) @(complete?"complete-color":String.Empty) @(cancel?"cancel-color":String.Empty)">Carga/Descarga <br />@(item.hora_embarques_liberacion.HasValue? item.hora_embarques_liberacion.Value.ToShortDateString():String.Empty) &nbsp;<br />@(item.hora_embarques_liberacion.HasValue? item.hora_embarques_liberacion.Value.ToShortTimeString():String.Empty) &nbsp;</p>
+                                                                <p class="label @(item.hora_embarques_liberacion.HasValue?"activo":String.Empty) @styleColor">Carga/Descarga <br />@(item.hora_embarques_liberacion.HasValue? item.hora_embarques_liberacion.Value.ToShortDateString():String.Empty) &nbsp;<br />@(item.hora_embarques_liberacion.HasValue? item.hora_embarques_liberacion.Value.ToShortTimeString():String.Empty) &nbsp;</p>
                                                             </li2>
                                                             <li2 title="@Html.DisplayFor(modelItem => item.RU_usuarios_vigilancia1.nombre)" data-toggle="tooltip" data-placement="top">
-                                                                <i class="icons awesome fa-solid fa-person-military-pointing fa-flip-horizontal @(item.hora_vigilancia_liberacion.HasValue?"activo":String.Empty) @(complete?"complete-color":String.Empty) @(cancel?"cancel-color":String.Empty)"></i>
-                                                                <div onclick="details(@item.id)" class="step fourth @(item.hora_vigilancia_liberacion.HasValue?"active":String.Empty) @(complete?"complete-background-color":String.Empty) @(cancel?"cancel-background-color":String.Empty)">
+                                                                <i class="icons awesome fa-solid fa-person-military-pointing fa-flip-horizontal @(item.hora_vigilancia_liberacion.HasValue?"activo":String.Empty) @styleColor"></i>
+                                                                <div onclick="details(@item.id)" class="step fourth @(item.hora_vigilancia_liberacion.HasValue?"active":String.Empty) @styleBackgroundColor">
                                                                     <p>4</p>
                                                                     <i class="awesome fa-solid fa-check"></i>
                                                                 </div>
-                                                                <p class="label @(item.hora_vigilancia_liberacion.HasValue?"activo":String.Empty) @(complete?"complete-color":String.Empty) @(cancel?"cancel-color":String.Empty)">Liberaci&oacute;n <br />@(item.hora_vigilancia_liberacion.HasValue? !item.id_vigilancia_liberacion.HasValue?"N/A": item.hora_vigilancia_liberacion.Value.ToShortDateString():String.Empty) &nbsp;<br />@(item.hora_vigilancia_liberacion.HasValue && item.id_vigilancia_liberacion.HasValue? item.hora_vigilancia_liberacion.Value.ToShortTimeString():String.Empty) &nbsp;</p>
+                                                                <p class="label @(item.hora_vigilancia_liberacion.HasValue?"activo":String.Empty) @styleColor">Liberaci&oacute;n <br />@(item.hora_vigilancia_liberacion.HasValue? !item.id_vigilancia_liberacion.HasValue?"N/A": item.hora_vigilancia_liberacion.Value.ToShortDateString():String.Empty) &nbsp;<br />@(item.hora_vigilancia_liberacion.HasValue && item.id_vigilancia_liberacion.HasValue? item.hora_vigilancia_liberacion.Value.ToShortTimeString():String.Empty) &nbsp;</p>
                                                             </li2>
                                                             <li2 title="@Html.DisplayFor(modelItem => item.RU_usuarios_vigilancia2.nombre)" data-toggle="tooltip" data-placement="top">
-                                                                <i class="icons awesome fa-solid fa-truck-fast @(item.hora_vigilancia_salida.HasValue?"activo":String.Empty) @(complete?"complete-color":String.Empty) @(cancel?"cancel-color":String.Empty)"></i>
-                                                                <div onclick="details(@item.id)" class="step fifth @(item.hora_vigilancia_salida.HasValue?"active":String.Empty) @(complete?"complete-background-color":String.Empty) @(cancel?"cancel-background-color":String.Empty)">
+                                                                <i class="icons awesome fa-solid fa-truck-fast @(item.hora_vigilancia_salida.HasValue?"activo":String.Empty) @styleColor"></i>
+                                                                <div onclick="details(@item.id)" class="step fifth @(item.hora_vigilancia_salida.HasValue?"active":String.Empty) @styleBackgroundColor">
                                                                     <p>5</p>
                                                                     <i class="awesome fa-solid fa-check"></i>
                                                                 </div>
-                                                                <p class="label @(item.hora_vigilancia_salida.HasValue?"activo":String.Empty) @(complete?"complete-color":String.Empty) @(cancel?"cancel-color":String.Empty)">Salida <br />@(item.hora_vigilancia_salida.HasValue? item.hora_vigilancia_salida.Value.ToShortDateString():String.Empty) &nbsp;<br />@(item.hora_vigilancia_salida.HasValue? item.hora_vigilancia_salida.Value.ToShortTimeString():String.Empty) &nbsp;</p>
+                                                                <p class="label @(item.hora_vigilancia_salida.HasValue?"activo":String.Empty) @styleColor">Salida <br />@(item.hora_vigilancia_salida.HasValue? item.hora_vigilancia_salida.Value.ToShortDateString():String.Empty) &nbsp;<br />@(item.hora_vigilancia_salida.HasValue? item.hora_vigilancia_salida.Value.ToShortTimeString():String.Empty) &nbsp;</p>
                                                             </li2>
                                                         </ul2>
                                                         <!-- End Step Progress Bar -->
@@ -264,7 +280,8 @@
                                                                 Confirmar Liberaci&oacute;n
                                                             </button>
                                                         }
-                                                        @if (item.EstadoEnum == Portal_2_0.Models.EstatusRURegistrosEnum.LiberadoVigilancia
+                                                        @if ((item.EstadoEnum == Portal_2_0.Models.EstatusRURegistrosEnum.LiberadoVigilancia
+                                                            ||item.EstadoEnum == Portal_2_0.Models.EstatusRURegistrosEnum.CanceladoEnPlanta )
                                                             && User.IsInRole(TipoRoles.RU_VIGILANCIA)
                                                             )
                                                         {
@@ -275,7 +292,10 @@
                                                         }
                                                         @if (!complete
                                                             && (User.IsInRole(TipoRoles.RU_VIGILANCIA) || User.IsInRole(TipoRoles.RU_ALMACEN_RECEPCION))
-                                                            && (item.EstadoEnum != Portal_2_0.Models.EstatusRURegistrosEnum.Cancelada && item.EstadoEnum != Portal_2_0.Models.EstatusRURegistrosEnum.SalidaPlanta)
+                                                            && (item.EstadoEnum != Portal_2_0.Models.EstatusRURegistrosEnum.Cancelada
+                                                                && item.EstadoEnum != Portal_2_0.Models.EstatusRURegistrosEnum.SalidaPlanta
+                                                                && item.EstadoEnum != Portal_2_0.Models.EstatusRURegistrosEnum.CanceladoEnPlanta
+                                                                )
                                                             )
                                                         {
                                                             <button onclick="cancel(@item.id)" class="btn btn-danger btn-sm">
@@ -385,7 +405,7 @@
             $.unblockUI();
 
             // Refresh every second
-            setInterval(reloadPage, 60000);
+            setInterval(reloadPage, 800000);
 
 
         });
